# esp-idf.nix

./: change.patch  default.nix  depgraph.nix  dump-json.patch  sdkconfig.example
example1/: CMakeLists.txt  example1.c  sdkconfig.h
modules/: common.nix  esp32.nix
nix/: sources.json
